--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: lightgray;
+  background-color:hsl(220, 15%, 55%);
   transition: 0.3s;
   
 }
